Bug 1265427 - nsDOMCameraControl needs an mOwnedStream to be consistent towards its VideoStreamTrack r=me

MozReview-Commit-ID: HfKPa4H7FyH